--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Prueba uroff",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll  --verbose --silent --runInBand ",
     "start": "nodemon --exec ./node_modules/.bin/babel-node src/index.js"
   },
   "keywords": [],
@@ -22,6 +22,9 @@
     "@babel/core": "^7.16.0",
     "@babel/node": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
-    "nodemon": "^2.0.14"
+    "@shelf/jest-mongodb": "^2.1.0",
+    "jest": "^27.3.1",
+    "nodemon": "^2.0.14",
+    "supertest": "^6.1.6"
   }
 }
